--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,11 @@ name: kab3
 on: push
 jobs:
  j1:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
     - name: step_1
       run: echo "hi"
     - name: st2
       run: echo "hi2222"
+
+
